@@ -1,5 +1,5 @@
 ^blib/
-^MANIFEST\.
+^MANIFEST\.bak$
 ^Makefile$
 ^Makefile\.old$
 ^pm_to_blib$
